--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "@mui/material-nextjs": "^7.0.2",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "d3": "^7.9.0",
     "next": "15.3.1",
     "react": "^19.0.0",
