--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "15.3.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
+    "prettier": "^3.5.3",
     "typescript": "^5"
   }
 }
