--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "lint": "next lint",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "npm run lint -- --fix",
+      "prettier . --write"
+    ],
+    "*.{json,md}": [
+      "prettier . --write"
+    ]
+  },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
@@ -30,8 +39,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "typescript": "^5"
   }
