--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "npm run lint -- --fix",
+      "next lint --fix --file",
       "prettier . --write"
     ],
     "*.{json,md}": [
