--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@mui/material-nextjs": "^7.0.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/sanitize-html": "^2.16.0",
     "d3": "^7.9.0",
     "next": "^15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanitize-html": "^2.16.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
