--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "supabase:update": "brew upgrade supabase",
+    "supabase:gen-types": "dotenv -- bash -c 'supabase gen types --lang typescript --project-id $SUPABASE_PROJECT_ID --schema public > ./src/types/supabase.ts'",
     "prepare": "husky"
   },
   "dependencies": {
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "^10.1.5",
