--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "build-start": "next build && next start",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint",
     "supabase:update": "brew upgrade supabase",
     "supabase:gen-types": "dotenv -- bash -c 'supabase gen types --lang typescript --project-id $SUPABASE_PROJECT_ID --schema public > ./src/types/supabase.ts'",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/d3": "^7.4.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -40,8 +42,11 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.32.0"
   }
