--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@apollo/server": "^4.12.0",
+    "@as-integrations/next": "^3.2.0",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -26,6 +29,7 @@
     "@types/sanitize-html": "^2.16.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.13",
+    "graphql": "^16.11.0",
     "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
