--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
+    "tsc-files": "^1.1.4",
     "typescript": "^5",
     "typescript-eslint": "^8.32.0"
   }
