--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@types/sanitize-html": "^2.16.0",
+    "@vercel/analytics": "^1.5.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
