--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
     "next": "^15.3.1",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanitize-html": "^2.16.0",
