fix: d3 consistent colors

--- a/src/lib/constants/mapped.json
+++ b/src/lib/constants/mapped.json
@@ -979,8 +979,8 @@
   "Food - Health/Protein": {
     "Protein Supplements": { "Vanilla Protein Powder": null }
   },
-  "Automotive": {
-    "Automotive Accessories": {
+  "Car": {
+    "Car Accessories": {
       "Portable Jump Starter": null,
       "Car Windshield Sun Shade": null,
       "Car Trash Can": null,
